Avance en la implementacion de la bitacora

--- a/OEVApp/i18n/String_En.xml
+++ b/OEVApp/i18n/String_En.xml
@@ -118,7 +118,10 @@
     <dataGridViewTextBoxColumnRoleConsultarB>Role</dataGridViewTextBoxColumnRoleConsultarB>
     <dataGridViewTextBoxColumnFechaConsultarB>Date</dataGridViewTextBoxColumnFechaConsultarB>
     <dataGridViewTextBoxColumnDetalleConsultarB>Detail</dataGridViewTextBoxColumnDetalleConsultarB>
-    
+    <lblHastaConsultarB>To</lblHastaConsultarB>
+    <lblDesdeConsultarB>Since</lblDesdeConsultarB>
+    <btnBuscarB>Searchs</btnBuscarB>
+  
   </InicioAdministrador>
 
 </Multiidioma>
